Also added geoplot

--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -186,6 +186,8 @@
       site: https://github.com/andrea-cuttone/geoplotlib/wiki/User-Guide
       badges: pypi
 
+    - repo: ResidentMario/geoplot
+
 - name: Other domain-specific
   intro: Tools focused on specific research or application areas other than those above.
   packages:
