Added scikit-plot and geoplot (#24)

--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -186,6 +186,11 @@
       site: https://github.com/andrea-cuttone/geoplotlib/wiki/User-Guide
       badges: pypi
 
+    - repo: ResidentMario/geoplot
+      site: https://residentmario.github.io/geoplot
+      conda_channel: conda-forge
+      badges: pypi, conda, site
+
 - name: Other domain-specific
   intro: Tools focused on specific research or application areas other than those above.
   packages:
@@ -213,6 +218,11 @@
 
     - repo: ContextLab/hypertools
       badges: pypi, rtd
+
+    - repo: reiinakano/scikit-plot
+      site: https://github.com/reiinakano/scikit-plot#welcome-to-scikit-plot
+      conda_channel: conda-forge
+      badges: pypi, conda, site
 
 - name: Large-data rendering
   intro: Tools for server-side rasterizing/aggregating data before visualization.
@@ -321,4 +331,3 @@
 
     - repo: almarklein/visvis
       dormant: https://github.com/almarklein/visvis#status
-
