--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -223,6 +223,10 @@
       site: https://github.com/reiinakano/scikit-plot#welcome-to-scikit-plot
       conda_channel: conda-forge
       badges: pypi, conda, site
+      
+    - repo: ismms-himc/clustergrammer2
+      site: https://clustergrammer.readthedocs.io/
+      badges: pypi, site      
 
 - name: Large-data rendering
   intro: Tools for server-side rasterizing/aggregating data before visualization.
