Update Yellowbrick tools (#31)
* Update Yellowbrick tools

Added Yellowbrick's conda channel and CI badges. 

Quick question: Yellowbrick is an [affiliated NumFOCUS project](https://numfocus.org/sponsored-projects/affiliated-projects) - may we add NumFOCUS to the sponsor's list?

* Add numfocus sponsorship

Co-Authored-By: Julia Signell <jsignell@gmail.com>

--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -217,8 +217,10 @@
       conda_channel: conda-forge
 
     - repo: DistrictDataLabs/yellowbrick
-      site: https://www.scikit-yb.org
-      badges: pypi, site
+       site: https://www.scikit-yb.org
+       sponsors: [numfocus]
+      conda_channel: DistrictDataLabs
+      badges: travis, appveyor, pypi, conda, site
 
     - repo: yt-project/yt
       sponsors: [numfocus]
