--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -248,7 +248,7 @@
       badges: pypi, travis, azure, coveralls, conda, site
 
 - name: Large-data rendering
-  intro: Tools for rasterizing/aggregating data before visualization, to allow  in some cases server-side.
+  intro: Tools for rasterizing/aggregating data before visualization, which can make rendering faster, allow larger datasets, or make it feasible to use remote datasets (with server-side rendering).
   packages:
 
     - repo: pyviz/datashader
