--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -218,6 +218,11 @@
       appveyor_project: dschult/networkx-pqott
       badges: travis, appveyor, codecov, pypi, conda, site
 
+    - repo: epfl-lts2/pygsp
+      site: https://pygsp.readthedocs.io
+      conda_channel: conda-forge
+      badges: travis, coveralls, pypi, conda, rtd, site
+
     - repo: scikit-image/scikit-image
       site: https://scikit-image.org
       badges: travis, appveyor, codecov, pypi, conda, site
