Added graph-tool entry to see what happens

--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -265,6 +265,10 @@
       site: https://clustergrammer.readthedocs.io
       badges: pypi, site
 
+    - repo: skewed/graph-tool
+      site: http://graph-tool.skewed.de
+      badges: pypi, rtd
+
 - name: Large-data rendering
   intro: Tools for rasterizing/aggregating data before visualization, which can make rendering faster, allow larger datasets, or make it feasible to use remote datasets (with server-side rendering).
   packages:
