--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -217,6 +217,7 @@
       site: https://networkx.github.io
       appveyor_project: dschult/networkx-pqott
       badges: travis, appveyor, codecov, pypi, conda, site
+      builton: graphviz
 
     - repo: skewed/graph-tool
       # repo: https://git.skewed.de/count0/graph-tool
@@ -235,11 +236,13 @@
       conda_package: python-graphviz
       conda_channel: conda-forge
       badges: travis, codecov, pypi, conda, rtd, site
+      builton: graphviz
 
     - repo: pygraphviz/pygraphviz
       site: https://pygraphviz.github.io
       conda_channel: conda-forge
       badges: travis, pypi, conda, site
+      builton: graphviz
 
     - repo: epfl-lts2/pygsp
       site: https://pygsp.readthedocs.io
@@ -272,7 +275,11 @@
 
     - repo: timkpaine/ipydagred3
       badges: azure, pypi
+      builton: d3
 
+    - repo: pydot/pydot
+      badges: pypi
+      builton: graphviz
 - name: Other domain-specific
   intro: Tools focused on specific research or application areas other than those above.
   packages:
