--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -244,15 +244,81 @@
       badges: pypi
       builton: opengl
 
-- name: Other domain-specific
-  intro: Tools focused on specific research or application areas other than those above.
+- name: Graphs and networks
+  intro: Tools specifically focused on visualizing graphs (networks).  Several of the other plotting libraries listed in other sections can also plot graphs, including Bokeh, HoloViews, Matplotlib, and Plotly.
   packages:
 
     - repo: networkx/networkx
       site: https://networkx.github.io
       appveyor_project: dschult/networkx-pqott
       badges: travis, appveyor, codecov, pypi, conda, site
-      builton: matplotlib
+      builton: matplotlib, graphviz
+
+    - repo: skewed/graph-tool
+      # repo: https://git.skewed.de/count0/graph-tool
+      site: http://graph-tool.skewed.de
+      conda_channel: conda-forge
+      badges: conda, site
+
+    - repo: igraph/python-igraph
+      site: https://igraph.org/python
+      conda_channel: conda-forge
+      appveyor_project: ntamas/python-igraph
+      badges: travis, appveyor, pypi, conda, site
+
+    - repo: xflr6/graphviz
+      site: https://graphviz.readthedocs.io
+      conda_package: python-graphviz
+      conda_channel: conda-forge
+      badges: travis, codecov, pypi, conda, rtd, site
+      builton: graphviz
+
+    - repo: pygraphviz/pygraphviz
+      site: https://pygraphviz.github.io
+      conda_channel: conda-forge
+      badges: travis, pypi, conda, site
+      builton: graphviz
+
+    - repo: epfl-lts2/pygsp
+      site: https://pygsp.readthedocs.io
+      conda_channel: conda-forge
+      badges: travis, coveralls, pypi, conda, rtd, site
+
+    - repo: benmaier/netwulf
+      site: https://netwulf.readthedocs.io
+      badges: travis, pypi, rtd, site
+
+    - repo: cytoscape/py2cytoscape
+      site: https://py2cytoscape.readthedocs.io
+      conda_channel: conda-forge
+      badges: travis, pypi, conda, rtd, site
+
+    - repo: WestHealth/pyvis
+      site: https://pyvis.readthedocs.io
+      badges: pypi, site
+
+    - repo: SkBlaz/Py3Plex
+      site: https://py3plex.readthedocs.io
+      badges: pypi, site
+
+    - repo: dblarremore/webweb
+      site: https://webwebpage.github.io
+      badges: pypi, site
+
+    - repo: Yomguithereal/ipysigma
+      badges: pypi
+
+    - repo: timkpaine/ipydagred3
+      badges: azure, pypi
+      builton: d3
+
+    - repo: pydot/pydot
+      badges: pypi
+      builton: graphviz
+      
+- name: Other domain-specific
+  intro: Tools focused on specific research or application areas other than those above.
+  packages:
 
     - repo: scikit-image/scikit-image
       site: https://scikit-image.org
@@ -296,11 +362,6 @@
       badges: travis, codecov, pypi, conda, site
       builton: matplotlib
 
-    - repo: epfl-lts2/pygsp
-      site: https://pygsp.readthedocs.io
-      conda_channel: conda-forge
-      badges: travis, coveralls, pypi, conda, rtd, site
-
     - repo: ContextLab/hypertools
       badges: pypi, rtd
       builton: matplotlib
@@ -309,10 +370,6 @@
       site: https://clustergrammer.readthedocs.io
       badges: pypi, site
       builton: webgl
-
-    - repo: skewed/graph-tool
-      site: http://graph-tool.skewed.de
-      badges: pypi, site
 
 - name: Large-data rendering
   intro: Tools for rasterizing/aggregating data before visualization, which can make rendering faster, allow larger datasets, or make it feasible to use remote datasets (with server-side rendering).
