--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -212,6 +212,13 @@
       site: https://python-visualization.github.io/folium
       conda_channel: conda-forge
       builton: leaflet
+      
+    - repo: pysal/splot
+      sponsors: [nsf]
+      site: https://splot.readthedocs.io/en/latest/?badge=latest
+      conda_channel: conda-forge
+      badges: coveralls, pypi, conda, site
+      builton: matplotlib
 
     - repo: SciTools/cartopy
       sponsors: [metoffice]
