--- a/tools/sponsors.yml
+++ b/tools/sponsors.yml
@@ -57,3 +57,8 @@ unidata:
   label: Unidata
   url: https://www.unidata.ucar.edu
   logo: _static/badges/unidata.png
+
+cgs:
+  label: cgs
+  url: https://spatial.ucr.edu
+  logo: _static/badges/cgs.svg
