--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
 dependencies:
   - flake8
   - jinja2
-  - m2r
+  - m2r @ git+https://github.com/crossnox/m2r@dev#egg=m2r
   - markdown
   - pyviz::nbsite
   - pyviz::nbsmoke
