--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,6 @@ channels:
 dependencies:
   - flake8
   - jinja2
-  - m2r @ git+https://github.com/crossnox/m2r@dev#egg=m2r
   - markdown
   - pyviz::nbsite
   - pyviz::nbsmoke
@@ -13,3 +12,5 @@ dependencies:
   - pyyaml
   - requests
   - tornado<6
+  - pip: 
+    - git+https://github.com/crossnox/m2r@dev#egg=m2r
