--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,7 @@ jobs:
     - <<: *build_cache
       env: BADGE=conda_downloads
       script:
-        - conda install -c conda-forge colorcet fastparquet intake intake-parquet s3fs python-snappy
+        - conda install -c conda-forge colorcet fastparquet intake intake-parquet s3fs python-snappy aiohttp requests
         - python tools/conda_downloads.py
 
     - &website_release
