--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ jobs:
         - git fetch https://github.com/$TRAVIS_REPO_SLUG.git cache:refs/remotes/cache
         - git checkout cache
         - mv ./tmp/* ./doc/_static/cache
-        - git add ./doc/_static/cache
+        - git add -f ./doc/_static/cache
         - git commit -m "adding cached badge of $BADGE"
         - git push -f -q "https://pyviz-developers:$GITHUB_TOKEN@github.com/pyviz/website.git" HEAD:cache
 
