--- a/environment.yml
+++ b/environment.yml
@@ -13,6 +13,5 @@ dependencies:
   - requests
   - tornado<6
   - pip: 
-    - git+https://github.com/crossnox/m2r@v0.2.7#egg=m2r
-    # Was 'dev'
+    - git+https://github.com/crossnox/m2r@v0.2.7#egg=m2r2
 
