--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,9 @@ jobs:
         - git checkout cache
         - mv ./tmp/* ./doc/_static/cache
         - git add ./doc/_static/cache
+        - ls ./doc/_static/cache
         - git commit -m "adding cached badge of $BADGE"
-        - git push -f -q "https://pyviz-developers:$GITHUB_TOKEN@github.com/$TRAVIS_REPO_SLUG.git" HEAD:cache
+        - git push -f "https://pyviz-developers:$GITHUB_TOKEN@github.com/$TRAVIS_REPO_SLUG.git" HEAD:cache
     - <<: *build_cache
       env: BADGE=stars
 
@@ -66,7 +67,7 @@ jobs:
       stage: website_release
       before_script:
         - git checkout -b deploy-${TRAVIS_BRANCH}
-        - git fetch https://github.com/$TRAVIS_REPO_SLUG.git cache:refs/remotes/cache  # all cached badges are in this branc
+        - git fetch https://github.com/$TRAVIS_REPO_SLUG.git cache:refs/remotes/cache  # all cached badges are in this branch
         - git checkout cache -- ./doc/_static/cache
       script: doit build_website
       deploy:
