Disable builds on cache branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ os:
 
 stages:
   - test
+    if: (branch != cache)
   - name: build_cache
     if: (commit_message =~ /^.*(website_dev).*$/) OR (branch = master)
   - name: website_release
